Add accordion function

--- a/src/index.html
+++ b/src/index.html
@@ -58,7 +58,7 @@
     <div id="product-list" class="product-list container"></div>
 
     <script id="template-menu-product" type="text/x-handlebars-template">
-      <article class="product active"> <!-- product -->
+      <article class="product"> <!-- product -->
 
           <header class="product__header">
             <h3 class="product__name no-spacing">{{ name }} <i class="fas fa-chevron-down product__icon"></i></h3>
@@ -91,7 +91,7 @@
                   {{#each options}}
                   <div class="checkbox checkbox--round"> <!-- radio -->
                     <label>
-                      {{{ label }}} ($$${{{ price }}})
+                      {{{ label }}} (${{{ price }}})
                       <input type="radio" name="{{ paramId }}" value="{{ @key }}" id="{{ @key }}" {{#if default}}checked{{/if}}>
                       <span class="checkbox__checkmark"></span>
                     </label>
