--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
   <link href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
   <link rel="stylesheet" href="vendor/range-slider.min.css">
+  <link rel="stylesheet" href="vendor/flickity-docs.css" media="screen">
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -21,6 +22,7 @@
           <h2 class="logo__subtitle">the best homemade Italian food</h2>
         </div>
         <div class="main-nav">
+          <a href="#home">Home</a>
           <a href="#order">Order</a>
           <a href="#booking">Booking</a>
         </div>
@@ -62,6 +64,9 @@
   </header>
 
   <div id="pages">
+    <section id="home">
+      <div id="home-page" class="home-page container"></div>
+    </section>
     <section id="order">
       <div id="product-list" class="product-list container"></div>
     </section>
@@ -69,6 +74,127 @@
       <div class="booking-wrapper container"></div>
     </section>
   </div>
+
+  <script id="template-home-widget" type="text/x-handlebars-template">
+    <div class="container">
+      <div class="home-wrapper">
+        <header class="home-header">
+          <div class="order-online">
+            <div class="text">
+              <a href="order">
+                <h2>Order online</h2>
+              </a>
+            </div>
+            <img class="img-1"src="images/assets/pizza-1.jpg">
+          </div>
+          <div class="book-table">
+            <div class="text">
+              <a href="booking">
+                <h2>Book a table</h2>
+              </a>
+            </div> 
+            <img class="img-2"src="images/assets/pizza-2.jpg">
+          </div>
+        </header>
+        <div class="open-hours">
+          <h2>OPENING HOURS</h2>
+          <h4>TUE-SUN, 12PM-12AM</h4>
+        </div>
+        
+        <div class="carousel-wrapper">
+          <div class="carousel" data-flickity='{ "autoPlay": true, "wrapAround": true, "contain": true, "prevNextButtons": false, "pageDots": true}'>
+            <div class="carousel-cell">
+              <img class="carousel-img" src="images/assets/pizza-3.jpg">
+              <div class="cell-text">
+                <h3>AMAZING SERVICE</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce nec mauris ullamcorper, aliquet velit sed, fringilla nibh.
+                   Mauris sagittis malesuada ultrices.</p>
+                <h6>John doe</h6>
+              </div>
+            </div>
+            <div class="carousel-cell">
+              <img class="carousel-img" src="images/assets/pizza-3.jpg">
+              <div class="cell-text">
+                <h3>GOOD FOOD</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce nec mauris ullamcorper, aliquet velit sed, fringilla nibh.
+                   Mauris sagittis malesuada ultrices.</p>
+                <h6>Johnathan doe</h6>
+              </div>
+            </div>
+            <div class="carousel-cell">
+              <img class="carousel-img" src="images/assets/pizza-3.jpg">
+              <div class="cell-text">
+                <h3>GOOD SERVICE</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce nec mauris ullamcorper, aliquet velit sed, fringilla nibh.
+                   Mauris sagittis malesuada ultrices.</p>
+                <h6>Josh doe</h6>
+              </div>
+            </div>
+          </div>
+        </div>
+        
+        <div class="gallery">
+          <div class="gallery-wrapper">
+            <div class="img-container">
+              <img src="images/assets/pizza-4.jpg" alt="appetizer">
+              <ul class="icons">
+                <li><a><i class="fas fa-heart"></i></a></li>
+                <li><a><i class="fas fa-share-alt"></i></a></li>
+              </ul>
+            </div>
+          </div>
+          <div class="gallery-wrapper">
+            <div class="img-container">
+              <img src="images/assets/pizza-5.jpg" alt="appetizer">
+              <ul class="icons">
+                <li><a><i class="fas fa-heart"></i></a></li>
+                <li><a><i class="fas fa-share-alt"></i></a></li>
+              </ul>
+            </div>
+          </div>
+          <div class="gallery-wrapper">
+            <div class="img-container">
+              <img src="images/assets/pizza-6.jpg" alt="appetizer">
+              <ul class="icons">
+                <li><a><i class="fas fa-heart"></i></a></li>
+                <li><a><i class="fas fa-share-alt"></i></a></li>
+              </ul>
+            </div>
+          </div>
+          <div class="gallery-wrapper">
+            <div class="img-container">
+              <img src="images/assets/pizza-7.jpg" alt="appetizer">
+              <ul class="icons">
+                <li><a><i class="fas fa-heart"></i></a></li>
+                <li><a><i class="fas fa-share-alt"></i></a></li>
+              </ul>
+            </div>
+          </div>
+          <div class="gallery-wrapper">
+            <div class="img-container">
+              <img src="images/assets/pizza-8.jpg" alt="appetizer">
+              <ul class="icons">
+                <li><a><i class="fas fa-heart"></i></a></li>
+                <li><a><i class="fas fa-share-alt"></i></a></li>
+              </ul>
+            </div>
+          </div>
+          <div class="gallery-wrapper">
+            <div class="img-container">
+              <img src="images/assets/pizza-9.jpg" alt="appetizer">
+              <ul class="icons">
+                <li><a><i class="fas fa-heart"></i></a></li>
+                <li><a><i class="fas fa-share-alt"></i></a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <footer>
+          <a href="#instagram"><p>View more on Instagram</p></a>
+        </footer>
+      </div>
+    </div>
+  </script>
 
   <script id="template-cart-product" type="text/x-handlebars-template">
     <li>
@@ -246,6 +372,7 @@
   <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.1.0/handlebars.min.js"></script>
   <script src="vendor/range-slider.min.js"></script>
+  <script src="vendor/flickity-docs.min.js"></script>
   <script src="js/app.js" type="module"></script>
 </body>
 </html>
