Home page styling

--- a/src/index.html
+++ b/src/index.html
@@ -83,6 +83,7 @@
             <div class="text">
               <a href="order">
                 <h2>Order online</h2>
+                <p>Delicious food delivered to your door</p>
               </a>
             </div>
             <img class="img-1"src="images/assets/pizza-1.jpg">
@@ -91,6 +92,7 @@
             <div class="text">
               <a href="booking">
                 <h2>Book a table</h2>
+                <p>Sit down by one of our tables</p>
               </a>
             </div> 
             <img class="img-2"src="images/assets/pizza-2.jpg">
