Add page activation for links in Home.js

--- a/src/index.html
+++ b/src/index.html
@@ -81,7 +81,7 @@
         <header class="home-header">
           <div class="order-online">
             <div class="text">
-              <a href="order">
+              <a href="#order" class="link">
                 <h2>Order online</h2>
                 <p>Delicious food delivered to your door</p>
               </a>
@@ -90,7 +90,7 @@
           </div>
           <div class="book-table">
             <div class="text">
-              <a href="booking">
+              <a href="#booking" class="link">
                 <h2>Book a table</h2>
                 <p>Sit down by one of our tables</p>
               </a>
