--- a/src/index.html
+++ b/src/index.html
@@ -25,6 +25,7 @@
           <a href="#home">Home</a>
           <a href="#order">Order</a>
           <a href="#booking">Booking</a>
+          <a href="#contact">Contact</a>
         </div>
         <div id="cart" class="cart">
           <div class="cart__summary">
@@ -73,6 +74,9 @@
     <section id="booking">
       <div class="booking-wrapper container"></div>
     </section>
+    <section id="contact">
+      <div id="contact-page" class="contact-page container"></div>
+    </section>
   </div>
 
   <script id="template-home-widget" type="text/x-handlebars-template">
@@ -86,7 +90,7 @@
                 <p>Delicious food delivered to your door</p>
               </a>
             </div>
-            <img class="img-1"src="images/assets/pizza-1.jpg">
+            <img class="img-1"src="images/assets/pizza-1.jpg" alt="served-pizza">
           </div>
           <div class="book-table">
             <div class="text">
@@ -95,12 +99,14 @@
                 <p>Sit down by one of our tables</p>
               </a>
             </div> 
-            <img class="img-2"src="images/assets/pizza-2.jpg">
+            <img class="img-2"src="images/assets/pizza-2.jpg" alt="seated-table">
           </div>
         </header>
         <div class="open-hours">
-          <h2>OPENING HOURS</h2>
-          <h4>TUE-SUN, 12PM-12AM</h4>
+          <a href="#contact" class="link">
+            <h2>Contact us</h2>
+            <h4>We are open: TUE-SUN, 12PM-12AM</h4>
+          </a>
         </div>
         
         <div class="carousel-wrapper">
@@ -284,7 +290,7 @@
               <div class="widget-amount"> <!-- widget-amount -->
                 <h3 class="product__params-title">Select quantity</h3>
                 <a class="btn-quantity" href="#less"><i class="fas fa-minus"></i></a>
-                <input class="amount" type="text" value="1">
+                <input class="amount" type="text">
                 <a class="btn-quantity" href="#more"><i class="fas fa-plus"></i></a>
               </div>
               <p class="product__total-price">
@@ -368,6 +374,38 @@
           <button type="submit" class="btn-secondary">Book table</button>
         </div>
       </form>
+    </div>
+  </script>
+
+  <script id="template-contact-widget" type="text/x-handlebars-template">
+    <div class="container">
+      <div class="contact-wrapper">
+        <div class="opening-time">
+          <ul>
+            <h2>We are open:</h2>
+            <li>Sunday: 12PM - 12AM</li>
+            <li>Monday: CLOSED</li>
+            <li>Tuesday: 12PM - 10PM</li>
+            <li>Wensday: 12PM - 10PM</li>
+            <li>Thursday: 12PM - 10PM</li>
+            <li>Friday: 12AM - 12AM</li>
+            <li>Saturday: 12AM - 2AM</li>
+          </ul>
+          <div class="map">
+            <h2>Find us:</h2>
+            <iframe width="300" height="300" loading="lazy" 
+              allowfullscreen src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJLy2ETTGDLxMR8meA2yuITAk&key=AIzaSyAADQQvk-wIx-vpyvgJEghWbyxoQBVxi9E"></iframe>
+          </div>
+        </div>
+        <h4>Have you enjoyed your meal?<br> Do you have any sugestions about things we can change?<br> Feel free to leave us your opinion!</h4>
+        <form>
+          <label>Your name:</label>
+          <input type="text" name="name">
+          <label>Leave your review:</label>
+          <textarea name="rewiew" rows="15" cols="30" maxlength="500"></textarea>
+          <button class="btn-primary" type="submit" name="submit">Submit</button>
+        </form>
+      </div>
     </div>
   </script>
 
