--- a/src/index.html
+++ b/src/index.html
@@ -286,7 +286,7 @@
               {{/ifEquals}}
               {{/each}}
             </ul>
-            <div class="amount"> <!-- controls -->
+            <div class="amount-wrapper"> <!-- controls -->
               <div class="widget-amount"> <!-- widget-amount -->
                 <h3 class="product__params-title">Select quantity</h3>
                 <a class="btn-quantity" href="#less"><i class="fas fa-minus"></i></a>
@@ -393,7 +393,7 @@
           </ul>
           <div class="map">
             <h2>Find us:</h2>
-            <iframe width="300" height="300" loading="lazy" 
+            <iframe loading="lazy" 
               allowfullscreen src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJLy2ETTGDLxMR8meA2yuITAk&key=AIzaSyAADQQvk-wIx-vpyvgJEghWbyxoQBVxi9E"></iframe>
           </div>
         </div>
